rename templates to qa game

--- a/views/email/forgetPassword.pug
+++ b/views/email/forgetPassword.pug
@@ -3,7 +3,7 @@ extends emailBase
 
 block content 
     p Hi #{name},
-    p Welcome to Hola Academy website, we're sorry you have this problem🙏
+    p Welcome to QA Game website, we're sorry you have this problem🙏
     p Please use the following OTP to complete reseting your password:
     table(role='presentation', border='0', cellpadding='0', cellspacing='0')
         tbody
@@ -15,4 +15,4 @@ block content
                                 td
                                     p #{url}
     p(style='color: red;') If you didn't request this, please ignore this email.
-    p - Hola Academy team 
+    p - QA Game team 
