--- a/views/email/welcome.pug
+++ b/views/email/welcome.pug
@@ -15,4 +15,4 @@ block content
                                 td
                                     p(style='color: blue;') #{WELCOME}
     p(style='color: red;') Have a good day!
-    p - Hola Academy team - 
+    p - QA Game team - 
