--- a/views/email/emailBase.pug
+++ b/views/email/emailBase.pug
@@ -31,7 +31,7 @@ html
                               // CONTENT
                               block content 
                                 p Hi NAME,
-                                p Welcome to Hola Academy, we're glad to have you 🎉🙏
+                                p Welcome to QA Game, we're glad to have you 🎉🙏
                                 p We're all a big familiy here, so make sure to upload your user photo so we get to know you a bit better!
                                 table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
                                   tbody
