--- a/views/email/verifyAccount.pug
+++ b/views/email/verifyAccount.pug
@@ -3,7 +3,7 @@ extends emailBase
 
 block content 
     p Hi #{name},
-    p Welcome to Hola Academy website, we're glad to have you 🎉🙏
+    p Welcome to QA Game website, we're glad to have you 🎉🙏
     p Please verify your email address by using the link below:
     table(role='presentation', border='0', cellpadding='0', cellspacing='0')
         tbody
@@ -15,4 +15,4 @@ block content
                                 td
                                     p #{url}
     p(style='color: red;') If you didn't request this, please ignore this email.
-    p - Hola Academy team 
+    p - QA Game team 
